[tool.poetry]
name = "3imq"
version = "0.1.0"
description = "Infinite resources"
authors = ["kwuite <kelvin@ludaro.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.6"
fastapi = "^0.89.1"
pyzmq = "^25.0.0"
pydantic = "^1.10.4"
uvicorn = "^0.20.0"
python-for-android = "^2022.12.20"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
flake8 = "^6.0.0"
pre-commit = "^3.0.0"
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
